--- a/packages.config
+++ b/packages.config
@@ -16,17 +16,16 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
-  <!--<package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net472" />-->
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net472" />
-  <!--<package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net472" />-->
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
-  <!--<package id="WebActivatorEx" version="2.1.0" targetFramework="net472" />-->
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
 </packages>
