--- a/WebsiteBanHang.csproj
+++ b/WebsiteBanHang.csproj
@@ -2370,6 +2370,7 @@
     <Compile Include="Models\LoaiThanhVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Metadata\SanPham.cs" />
     <Compile Include="Models\Metadata\ThanhVien.cs" />
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -2466,6 +2467,7 @@
     <Content Include="Views\Home\SanPhamMoi.cshtml" />
     <Content Include="Views\SanPham\SanPhamLienQuan.cshtml" />
     <Content Include="Views\Home\TaiKhoanCuaToi.cshtml" />
+    <Content Include="Views\QuanLySanPham\Remove.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
