--- a/WebsiteBanHang.csproj
+++ b/WebsiteBanHang.csproj
@@ -2374,6 +2374,9 @@
     <Compile Include="Models\LoaiThanhVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoaiThanhVien_Quyen.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Metadata\SanPham.cs" />
     <Compile Include="Models\Metadata\ThanhVien.cs" />
     <Compile Include="Models\Model1.Context.cs">
@@ -2398,6 +2401,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PhieuNhap.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Quyen.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SanPham.cs">
