--- a/Web.config
+++ b/Web.config
@@ -66,7 +66,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-2BLQ4QKL\SQLEXPRESS;initial catalog=QuanLyBanHang;user id=sa;password=Quyen02112003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-2BLQ4QKL\SQLEXPRESS;initial catalog=QuanLyBanHang;user id=sa;password=04122003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=WebsiteBanHang; Integrated Security = true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
