--- a/WebsiteBanHang.csproj
+++ b/WebsiteBanHang.csproj
@@ -2338,8 +2338,10 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Context\DbContextLocal.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\QuanLyDatHangController.cs" />
     <Compile Include="Controllers\QuanLyNhapHangController.cs" />
     <Compile Include="Controllers\QuanLySanPhamController.cs" />
@@ -2378,6 +2380,7 @@
     <Compile Include="Models\LoaiThanhVien_Quyen.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Metadata\Global.cs" />
     <Compile Include="Models\Metadata\SanPham.cs" />
     <Compile Include="Models\Metadata\ThanhVien.cs" />
     <Compile Include="Models\Model1.Context.cs">
@@ -2468,7 +2471,7 @@
     <Content Include="Views\Home\SlideChiTietNhaSanXuat.cshtml" />
     <Content Include="Views\SanPham\DonGia.cshtml" />
     <Content Include="Views\Layout\_LayoutAdmin.cshtml" />
-    <Content Include="Views\Admin\HomeAdmin.cshtml" />
+    <Content Include="Views\Admin\LoginAdminPartial.cshtml" />
     <Content Include="Views\Home\GioiThieu.cshtml" />
     <Content Include="Views\Home\LienHe.cshtml" />
     <Content Include="Views\QuanLySanPham\ChinhSua.cshtml" />
@@ -2486,8 +2489,19 @@
     <Content Include="Views\QuanLyDatHang\DuyetDonHang.cshtml" />
     <Content Include="Views\QuanLyDatHang\ChiTietDonHang.cshtml" />
     <Content Include="Views\ThongKe\ThongKeSanPham.cshtml" />
-    <Content Include="Views\Quyen\DanhSachLoaiThanhVien.cshtml" />
     <Content Include="Views\GioHang\UpdateCard.cshtml" />
+    <Content Include="Views\QuanLySanPham\MenuProductPartial.cshtml" />
+    <Content Include="Views\QuanLyDatHang\MenuOrderPartial.cshtml" />
+    <Content Include="Views\Quyen\ListRole.cshtml" />
+    <Content Include="Views\Error\Http404.cshtml" />
+    <Content Include="Views\Quyen\CreateRole.cshtml" />
+    <Content Include="Views\Quyen\UpdateRole.cshtml" />
+    <Content Include="Views\Quyen\MenuRolePartial.cshtml" />
+    <Content Include="Views\Quyen\Membershiptype.cshtml" />
+    <Content Include="Views\Quyen\Decentralization.cshtml" />
+    <Content Include="Views\Member\ListMember.cshtml" />
+    <Content Include="Views\Member\CreateMember.cshtml" />
+    <Content Include="Views\Member\EditMember.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
