--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	<!--<sessionState timeout="1"></sessionState>-->
+    <!--<sessionState timeout="1"></sessionState>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -66,8 +66,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-2BLQ4QKL\SQLEXPRESS;initial catalog=QuanLyBanHang;user id=sa;password=04122003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=WebsiteBanHang; Integrated Security = true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyBanHang;user id=sa;password=04122003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
