--- a/WebsiteBanHang.csproj
+++ b/WebsiteBanHang.csproj
@@ -2127,16 +2127,6 @@
     <Content Include="assets\tinymce\js\tinymce\tinymce.min.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Global.asax" />
-    <Content Include="Models\Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-    </Content>
     <Content Include="assets\admin\.browserslistrc" />
     <Content Include="assets\admin\.travis.yml" />
     <Content Include="assets\admin\LICENSE" />
@@ -2317,8 +2307,26 @@
     <Content Include="assets\admin\vendor\jquery\jquery.slim.min.map" />
     <Content Include="assets\tinymce\CHANGELOG.md" />
     <Content Include="assets\tinymce\js\tinymce\langs\README.md" />
+    <EntityDeploy Include="Models\Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
+    <Content Include="Models\Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
     <Content Include="readme.txt" />
+    <Content Include="Scripts\Checkimage.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
     <Content Include="Scripts\jquery-3.7.1.slim.js" />
@@ -2330,6 +2338,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\textarea.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -2342,6 +2351,7 @@
     <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\QuanLyDatHangController.cs" />
     <Compile Include="Controllers\QuanLyNhapHangController.cs" />
     <Compile Include="Controllers\QuanLySanPhamController.cs" />
@@ -2419,6 +2429,9 @@
     <Compile Include="Models\ThanhVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TinTuc.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -2436,13 +2449,6 @@
     <Content Include="assets\fonts\lgd641d641.eot" />
     <Content Include="assets\fonts\lgd641d641.ttf" />
     <Content Include="assets\fonts\lgd641d641.woff" />
-    <EntityDeploy Include="Models\Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
     <None Include="packages.config" />
     <Content Include="Views\Layout\_LayoutHome.cshtml" />
     <Content Include="Views\SanPham\Sanphamstyle1Partial.cshtml" />
@@ -2502,6 +2508,10 @@
     <Content Include="Views\Member\ListMember.cshtml" />
     <Content Include="Views\Member\CreateMember.cshtml" />
     <Content Include="Views\Member\EditMember.cshtml" />
+    <Content Include="Views\News\MenuNews.cshtml" />
+    <Content Include="Views\News\CreateNews.cshtml" />
+    <Content Include="Views\News\ListNews.cshtml" />
+    <Content Include="Views\News\UpdateNews.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -2511,6 +2521,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="assets\images\News\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
